--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cakto-app",
   "main": "expo-router/entry",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "axios": "^1.7.7",
     "expo": "~52.0.9",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
