--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "cakto-app",
   "main": "expo-router/entry",
-  "version": "1.0.11",
+  "version": "1.0.12",
+  "author": {
+    "name": "Gabriel Alcântara Bernardes Pedro",
+    "email": "gabriel.pedro@ubistart.com"
+  },
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
