refactor: move to src folder

--- a/app.json
+++ b/app.json
@@ -1,42 +1,34 @@
 {
   "expo": {
-    "name": "cakto-app",
-    "slug": "cakto-app",
+    "name": "Cakto",
+    "slug": "cakto",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "web": {
+      "favicon": "./assets/favicon.png"
+    },
+    "experiments": {
+      "tsconfigPaths": true
+    },
+    "plugins": ["expo-font"],
+    "orientation": "portrait",
+    "icon": "src/assets/images/cakto-image.png",
+    "backgroundColor": "rgba(0, 161, 104, 1)",
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "src/assets/images/cakto-image.png",
+      "resizeMode": "contain",
+      "backgroundColor": "rgba(0, 161, 104, 1)"
+    },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ],
-      "expo-font"
-    ],
-    "experiments": {
-      "typedRoutes": true
     }
   }
 }
