--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cakto-app",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "author": {
     "name": "Gabriel Alcântara Bernardes Pedro",
     "email": "gabriel.pedro@ubistart.com"
@@ -27,6 +27,7 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^13.0.1",
     "react-native-recaptcha-that-works": "^2.0.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
