--- a/app.json
+++ b/app.json
@@ -10,7 +10,9 @@
     "experiments": {
       "tsconfigPaths": true
     },
-    "plugins": ["expo-font"],
+    "plugins": [
+      "expo-font"
+    ],
     "orientation": "portrait",
     "icon": "src/assets/images/cakto-image.png",
     "backgroundColor": "rgba(0, 161, 104, 1)",
@@ -20,7 +22,9 @@
       "resizeMode": "contain",
       "backgroundColor": "rgba(0, 161, 104, 1)"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -28,7 +32,8 @@
       "adaptiveIcon": {
         "foregroundImage": "src/assets/images/cakto-image.png",
         "backgroundColor": "rgba(0, 161, 104, 1)"
-      }
+      },
+      "package": "com.anonymous.cakto"
     }
   }
 }
