--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cakto-app",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "author": {
     "name": "Gabriel Alcântara Bernardes Pedro",
     "email": "gabriel.pedro@ubistart.com"
   },
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "expo start",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
@@ -31,7 +31,14 @@
     "react-native-recaptcha-that-works": "^2.0.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "react-native-webview": "^13.12.5",
+    "expo-constants": "~17.0.3"
+  },
+  "overrides": {
+    "react-native-recaptcha-that-works": {
+      "react-native-webview": "^13.12.5"
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
