--- a/app.json
+++ b/app.json
@@ -10,9 +10,7 @@
     "experiments": {
       "tsconfigPaths": true
     },
-    "plugins": [
-      "expo-font"
-    ],
+    "plugins": ["expo-font"],
     "orientation": "portrait",
     "icon": "src/assets/images/cakto-image.png",
     "backgroundColor": "rgba(0, 161, 104, 1)",
@@ -22,9 +20,7 @@
       "resizeMode": "contain",
       "backgroundColor": "rgba(0, 161, 104, 1)"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -33,7 +29,7 @@
         "foregroundImage": "src/assets/images/cakto-image.png",
         "backgroundColor": "rgba(0, 161, 104, 1)"
       },
-      "package": "com.anonymous.cakto"
+      "package": "com.cakto.production"
     }
   }
 }
