--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-webview": "^13.12.5",
-    "expo-constants": "~17.0.3"
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.5"
   },
   "overrides": {
     "react-native-recaptcha-that-works": {
