feat: CAKTOAPP108 - add pix button

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Cakto",
     "slug": "cakto",
-    "version": "1.0.0",
+    "version": "1.0.10",
     "newArchEnabled": true,
     "web": {
       "favicon": "src/assets/images/cakto.png"
@@ -10,9 +10,7 @@
     "experiments": {
       "tsconfigPaths": true
     },
-    "plugins": [
-      "expo-font"
-    ],
+    "plugins": ["expo-font"],
     "orientation": "portrait",
     "icon": "src/assets/images/cakto.png",
     "backgroundColor": "#00a168",
@@ -22,9 +20,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#00a168"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "br.com.cakto",
