--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "axios": "^1.7.8",
     "expo": "^52.0.14",
     "expo-clipboard": "~7.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
+    "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
@@ -32,10 +35,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
-    "react-native-webview": "^13.12.5",
-    "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.6",
-    "expo-linear-gradient": "~14.0.1"
+    "react-native-webview": "^13.12.5"
   },
   "overrides": {
     "react-native-recaptcha-that-works": {
