--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cakto-app",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "author": {
     "name": "Gabriel Alcântara Bernardes Pedro",
     "email": "gabriel.pedro@ubistart.com"
@@ -37,7 +37,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-view-shot": "~4.0.3",
-    "react-native-webview": "^13.12.5"
+    "react-native-webview": "^13.12.5",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "overrides": {
     "react-native-recaptcha-that-works": {
