--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo-google-fonts/space-grotesk": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.4",
     "axios": "^1.7.8",
@@ -38,7 +39,7 @@
     "react-native-svg": "15.8.0",
     "react-native-view-shot": "~4.0.3",
     "react-native-webview": "^13.12.5",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "toastify-react-native": "^5.0.3"
   },
   "overrides": {
     "react-native-recaptcha-that-works": {
