--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.4",
     "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
     "expo": "^52.0.14",
     "expo-camera": "~16.0.10",
     "expo-clipboard": "~7.0.0",
@@ -37,6 +38,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-native-view-shot": "~4.0.3",
     "react-native-webview": "^13.12.5",
     "toastify-react-native": "^5.0.3"
